wip - hent aktiviteter fra veilarbarena